Atualização ex023 e meu treino3

--- a/Meu Treino3/index.html
+++ b/Meu Treino3/index.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-<h1>Apenas Vídeos</h1>
+<h1 style="color: white;">Apenas Vídeos</h1>
     <a href="pag1.html"<picture><img src="Imagens/sddefault.jpeg" alt="Video Triste" width="250px" height="190x"></picture></a>
 
     <a href="pag2.html"><picture><img src="Imagens/trabalho.jpeg" alt="Video Trabalho" width="250px" height="190px"></picture></a>
