--- a/Meu Treino3/pag2.html
+++ b/Meu Treino3/pag2.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 <body>
-    <h1>Momento Feliz</h1>
+    <h1 style="color: white;">Momento Feliz</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_OHDssbQPlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
     <br>
