--- a/ex023/tabelaH.html
+++ b/ex023/tabelaH.html
@@ -27,6 +27,9 @@
 
             <input type="radio" name="gen" id="iga"><label for="iga">Gay</label>
         </fieldset>
+        <p>
+            <input type="submit" value="Enviar">
+       </p>
     </form>
 
     <script>
