--- a/ex026/mq004/idenx.html
+++ b/ex026/mq004/idenx.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
     <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
         <h1>Testando Media Queries</h1>
-        <img src="imagens/icon-phone.png" alt="Acess via Smartphone">
-        <img src="imagens/icon-tablet.png" alt="Acess via Tablat">
-        <img src="imagens/icon-print.png" alt="Versao Impressora">
-        <img src="imagens/icon-pc.png" alt="Versao Desktop">
-        <img src="imagens/icon-tv.png" alt="Verão TV">
+        <img id="phone" src="imagens/icon-phone.png" alt="Acess via Smartphone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Acess via Tablat">
+        <img id="print" src="imagens/icon-print.png" alt="Versao Impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="Versao Desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="Verão TV">
     </main>
 </body>
 </html>
